[tool.poetry]
name = "tkirk-nbantfy-dev"
version = "0.1.0"
description = ""
authors = ["Taj Kirkpatrick"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.12.2"
urllib3 = "^2.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
